--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Noctus | Developer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
@@ -26,7 +26,7 @@
 
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css"
     />
     <link rel="stylesheet" href="styles.scss" />
     <script
@@ -46,9 +46,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Noctus</span>
           <br />
-          I'm the Unknown Developer.
+          I'm a Full-Stack Developer.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -79,11 +79,11 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you have!
+                I'm a self-taught Full-Stack Developer who wants to make the world a better place! I'm looking for learning & developing my scope all the time.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                I'm currently working on Full-Stack web & mobile apps. And I'm learning Artifical Intelligence & Machine Learning systems.
+                In my free times I love making music, swimming and bodybuilding.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -112,7 +112,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Personal Website</h3>
                 <div>
                   <p class="mb-4">
                     Describe the project being very specific, you can use the Twitter standard: no more than 280 characters: 
@@ -124,7 +124,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://noctus.dev/"
                 >
                   See Live
                 </a>
@@ -132,7 +132,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/Darkistaken/Darkistaken.github.io"
                 >
                   Source Code
                 </a>
@@ -272,13 +272,13 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">You can be able to contact me on any issue that comes to your mind.</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:info@noctus.dev"
+            >Contact Me!</a
           >
         </div>
       </div>
@@ -292,14 +292,23 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
+          <a rel="noreferrer" href="https://twitter.com/NoctusDark" target="_blank">
+            <i class="fab fa-twitter fa-inverse"></i>
           </a>
           <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-linkedin fa-inverse"></i>
+            <i class="fab fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-github fa-inverse"></i>
+          <a rel="noreferrer" href="https://github.com/darkistaken" target="_blank">
+            <i class="fab fa-github fa-inverse"></i>
+          </a>
+          <a rel="noreferrer" href="https://discord.com/users/436210128879091732" target="_blank">
+            <i class="fab fa-brands fa-discord fa-inverse"></i>
+          </a>
+          <a rel="noreferrer" href="https://keybase.io/noctusdark" target="_blank">
+            <i class="fab fa-keybase fa-inverse"></i>
+          </a>
+          <a rel="noreferrer" href="https://ko-fi.com/noctusdark" target="_blank">
+            <i class="fa fa-coffee fa-inverse"></i>
           </a>
         </div>
 
@@ -307,10 +316,10 @@
 
         <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
         <p class="footer__text">
-          © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobiwave" target="_blank"
-            >Jacobo Martínez</a
-          >
+          © 2023 - All rights reserved by 
+          <a rel="noreferrer" href="https://noctus.dev/" target="_blank">Noctus 🌙</a><br>
+          Thanks to <a rel="noreferrer" href="https://github.com/cobiwave" target="_blank"
+          >Jacobo Martínez</a> for valuable contributions. 💜
         </p>
 
         <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
@@ -318,7 +327,7 @@
           <a
             rel="noreferrer"
             class="github-button"
-            href="https://github.com/cobiwave/simplefolio/fork"
+            href="https://github.com/darkistaken/simple-portfolio/fork"
             data-icon="octicon-repo-forked"
             data-size="large"
             data-show-count="true"
@@ -328,7 +337,7 @@
           <a
             rel="noreferrer" 
             class="github-button"
-            href="https://github.com/cobiwave/simplefolio"
+            href="https://github.com/darkistaken/simple-portfolio"
             data-icon="octicon-star"
             data-size="large"
             data-show-count="true"
